removed files to make directory clean

--- a/tex/INF221.bib
+++ b/tex/INF221.bib
@@ -1,6 +1,6 @@
 
 @book{cormen_introduction_2009,
-	location = {{USA}},
+	location = {{MIT}, {USA}},
 	edition = {3rd},
 	title = {Introduction to Algorithms},
 	isbn = {978-0-262-03384-8},
@@ -20,7 +20,8 @@
 	titleaddon = {{GitLab}},
 	author = {Olsen, Mats Hoem and Granheim, Roy Erling and Stokke, Sindre},
 	urldate = {2021-10-19},
-	langid = {english}
+	langid = {english},
+	file = {Snapshot:C\:\\Users\\matsh\\Zotero\\storage\\W9YTZVNW\\main.html:text/html}
 }
 
 @online{olsen_conaltdeleteinf221termpaper2021_nodate,
@@ -31,5 +32,93 @@
 	titleaddon = {{GitHub}},
 	author = {Olsen, Mats Hoem and Stokke, Sindre and Granheim, Roy Erling},
 	urldate = {2021-10-19},
-	langid = {english}
+	langid = {english},
+	file = {Snapshot:C\:\\Users\\matsh\\Zotero\\storage\\GQT2SYU2\\INF221TermPaper2021.html:text/html}
+}
+
+@online{noauthor_timsort_2017,
+	title = {{TimSort}},
+	url = {https://www.geeksforgeeks.org/timsort/},
+	abstract = {A Computer Science portal for geeks. It contains well written, well thought and well explained computer science and programming articles, quizzes and practice/competitive programming/company interview Questions.},
+	titleaddon = {{GeeksforGeeks}},
+	urldate = {2021-10-19},
+	date = {2017-05-19},
+	langid = {english},
+	note = {Section: Sorting},
+	file = {Snapshot:C\:\\Users\\matsh\\Zotero\\storage\\BYAKWJYH\\timsort.html:text/html}
+}
+
+@online{noauthor_advanced_2020,
+	title = {Advanced Quick Sort (Hybrid Algorithm)},
+	url = {https://www.geeksforgeeks.org/advanced-quick-sort-hybrid-algorithm/},
+	abstract = {A Computer Science portal for geeks. It contains well written, well thought and well explained computer science and programming articles, quizzes and practice/competitive programming/company interview Questions.},
+	titleaddon = {{GeeksforGeeks}},
+	urldate = {2021-10-19},
+	date = {2020-08-04},
+	langid = {english},
+	note = {Section: Algorithms},
+	file = {Snapshot:C\:\\Users\\matsh\\Zotero\\storage\\S45HDIFZ\\advanced-quick-sort-hybrid-algorithm.html:text/html}
+}
+
+@online{noauthor_merge_nodate,
+	title = {Merge Sort - {GeeksforGeeks}},
+	url = {https://www.geeksforgeeks.org/merge-sort/},
+	urldate = {2021-10-22}
+}
+
+@online{kaur_merge_nodate,
+	title = {Merge Sort Algorithm {\textbar} Studytonight},
+	url = {https://www.studytonight.com/data-structures/merge-sort},
+	author = {Kaur, Harpreet},
+	urldate = {2021-10-22},
+	file = {Merge Sort Algorithm | Studytonight:C\:\\Users\\matsh\\Zotero\\storage\\8X2SHY5L\\merge-sort.html:text/html}
+}
+
+@online{rossum_listsort_nodate,
+	title = {listsort},
+	rights = {Python},
+	url = {https://svn.python.org/projects/python/trunk/Objects/listsort.txt},
+	abstract = {Beskriver algoritmen til Python.},
+	author = {Rossum, Guido van},
+	urldate = {2021-10-22},
+	file = {svn.python.org/projects/python/trunk/Objects/listsort.txt:C\:\\Users\\matsh\\Zotero\\storage\\88RS9798\\listsort.html:text/html}
+}
+
+@article{al-kharabsheh_review_2013,
+	title = {Review on Sorting Algorithms A Comparative Study},
+	volume = {7},
+	abstract = {There are many popular problems in different practical fields of computer sciences, database applications, Networks and Artificial intelligence. One of these basic operations and problems is sorting algorithm; the sorting problem has attracted a great deal of research. A lot of sorting algorithms has been developed to enhance the performance in terms of computational complexity. there are several factors that must be taken in consideration; time complexity, stability, memory space. Information growth rapidly in our world leads to increase developing sort algorithms.a stable sorting algorithms maintain the relative order of records with equal keys This paper makes a comparison between the Grouping Comparison Sort ({GCS}) and conventional algorithm such as Selection sort, Quick sort, Insertion sort , Merge sort and Bubble sort with respect execution time to show how this algorithm perform reduce execution time.},
+	pages = {7},
+	number = {3},
+	journaltitle = {International Journal of Computer Science and Security ({IJCSS})},
+	shortjournal = {International Journal of Computer Science and Security ({IJCSS})},
+	author = {Al-Kharabsheh, Khalid Suleiman and {AlTurani}, Ibrahim Mahmoud and {AlTurani}, Abdallah Mahmoud Ibrahim and Zanoon, Nabeel Imhammed},
+	date = {2013-01},
+	langid = {english},
+	file = {Al-Kharabsheh et al. - 2013 - Review on Sorting Algorithms A Comparative Study.pdf:C\:\\Users\\matsh\\Zotero\\storage\\FHGCQEY6\\Al-Kharabsheh et al. - 2013 - Review on Sorting Algorithms A Comparative Study.pdf:application/pdf}
+}
+
+@online{noauthor_bubble_nodate,
+	title = {Bubble Sort - {GeeksforGeeks}},
+	url = {https://www.geeksforgeeks.org/bubble-sort/},
+	urldate = {2021-10-22}
+}
+
+@online{noauthor_insertion_nodate,
+	title = {Insertion Sort - {GeeksforGeeks}},
+	url = {https://www.geeksforgeeks.org/insertion-sort/},
+	urldate = {2021-10-22}
+}
+
+@article{ritchie_stream_1984,
+	title = {A Stream Input-Output System},
+	volume = {63},
+	abstract = {In a new version of the Unix operating system, a flexible coroutine-based design replaces the traditional rigid connection between processes and terminals or networks. Processing modules may be inserted dynamically into the stream that connects a user’s program to a device. Programs may also connect directly to programs, providing interprocess communication.},
+	pages = {9},
+	number = {8},
+	journaltitle = {{AT}\&T Bell Laboratories Technical Journal},
+	author = {Ritchie, Dennis M},
+	date = {1984-10},
+	langid = {english},
+	file = {Ritchie - A Stream Input-Output System.pdf:C\:\\Users\\matsh\\Zotero\\storage\\ZT59SUEH\\Ritchie - A Stream Input-Output System.pdf:application/pdf}
 }
